; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_account_steal_time.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_account_steal_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.cpu_usage_stat }
%struct.cpu_usage_stat = type { i32 }

@kstat_this_cpu = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @account_steal_time(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cpu_usage_stat*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store %struct.cpu_usage_stat* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kstat_this_cpu, i32 0, i32 0), %struct.cpu_usage_stat** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @cputime_to_cputime64(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load %struct.cpu_usage_stat*, %struct.cpu_usage_stat** %3, align 8
  %8 = getelementptr inbounds %struct.cpu_usage_stat, %struct.cpu_usage_stat* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @cputime64_add(i32 %9, i32 %10)
  %12 = load %struct.cpu_usage_stat*, %struct.cpu_usage_stat** %3, align 8
  %13 = getelementptr inbounds %struct.cpu_usage_stat, %struct.cpu_usage_stat* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  ret void
}

declare dso_local i32 @cputime_to_cputime64(i32) #1

declare dso_local i32 @cputime64_add(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
